style.css
html {
    scroll-behavior: smooth;
}

body {
    background: url(images/code-background.png) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

footer {
    position: relative;
    display: flex;
    padding: 30px;
}

.about-me {
    width: 100%;
    padding: 20px;
}

.icon-link {
    margin: 0 50px;
}

.squares {
    padding-top: 3vw;
    padding-bottom: 3vw;
}

.square {
    max-height: 90%;
    width: 30vw;
    margin-top: 30px;
    margin-bottom: 30px;
}

@media screen and (max-width: 768px) {
    .square {
        width: 80vw;
        height: auto;
    }

    .squares {
        flex-wrap: wrap;
    }
}

